<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UpdateOrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Customername" />

        <TextView
            android:id="@+id/tvTimestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TimeStamp"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/edtValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Value" />

    </LinearLayout>

</FrameLayout>